API-GestionLogs/despliegueKubernetes/facturas-2-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: C:\ProgramData\chocolatey\lib\kubernetes-kompose\tools\kompose.exe convert
    kompose.version: 1.26.1 (a9d05d509)
  creationTimestamp: null
  labels:
    io.kompose.service: facturas-2
  name: facturas-2
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: facturas-2
  strategy: {}
  template:
    metadata:
      annotations:
        kompose.cmd: C:\ProgramData\chocolatey\lib\kubernetes-kompose\tools\kompose.exe convert
        kompose.version: 1.26.1 (a9d05d509)
      creationTimestamp: null
      labels:
        io.kompose.network/aos: "true"
        io.kompose.service: facturas-2
    spec:
      containers:
        - image: mwan93/aos_servicio_facturas:v0.2
          name: facturas-2
          ports:
            - containerPort: 4010
          resources: {}
      restartPolicy: Always
status: {}
