API-GestionLogs/despliegueKubernetes/facturas-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: C:\ProgramData\chocolatey\lib\kubernetes-kompose\tools\kompose.exe convert
    kompose.version: 1.26.1 (a9d05d509)
  creationTimestamp: null
  labels:
    io.kompose.service: facturas
  name: facturas
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: facturas
  strategy: {}
  template:
    metadata:
      annotations:
        kompose.cmd: C:\ProgramData\chocolatey\lib\kubernetes-kompose\tools\kompose.exe convert
        kompose.version: 1.26.1 (a9d05d509)
      creationTimestamp: null
      labels:
        io.kompose.network/aos: "true"
        io.kompose.service: facturas
    spec:
      containers:
        - image: eloz/grupo8facturas
          name: facturas
          ports:
            - containerPort: 80
          resources: {}
      restartPolicy: Always
status: {}
