API-GestionLogs/despliegueKubernetes/logs-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: C:\ProgramData\chocolatey\lib\kubernetes-kompose\tools\kompose.exe convert
    kompose.version: 1.26.1 (a9d05d509)
  creationTimestamp: null
  labels:
    io.kompose.service: logs
  name: logs
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: logs
  strategy: {}
  template:
    metadata:
      annotations:
        kompose.cmd: C:\ProgramData\chocolatey\lib\kubernetes-kompose\tools\kompose.exe convert
        kompose.version: 1.26.1 (a9d05d509)
      creationTimestamp: null
      labels:
        io.kompose.network/aos: "true"
        io.kompose.service: logs
    spec:
      containers:
        - image: alonsodinavarro/logs_api_equipo2:v1
          name: logs
          ports:
            - containerPort: 3000
          resources: {}
      restartPolicy: Always
status: {}
