API-GestionLogs/despliegueKubernetes/recambios-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: C:\ProgramData\chocolatey\lib\kubernetes-kompose\tools\kompose.exe convert
    kompose.version: 1.26.1 (a9d05d509)
  creationTimestamp: null
  labels:
    io.kompose.service: recambios
  name: recambios
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: recambios
  strategy: {}
  template:
    metadata:
      annotations:
        kompose.cmd: C:\ProgramData\chocolatey\lib\kubernetes-kompose\tools\kompose.exe convert
        kompose.version: 1.26.1 (a9d05d509)
      creationTimestamp: null
      labels:
        io.kompose.network/aos: "true"
        io.kompose.service: recambios
    spec:
      containers:
        - image: ghcr.io/adrianja5/aos-implementacion-servicio-recambios:1.0.1
          name: recambios
          ports:
            - containerPort: 8080
          resources: {}
      restartPolicy: Always
status: {}
