API-GestionLogs/despliegueKubernetes/trabajos-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: C:\ProgramData\chocolatey\lib\kubernetes-kompose\tools\kompose.exe convert
    kompose.version: 1.26.1 (a9d05d509)
  creationTimestamp: null
  labels:
    io.kompose.service: trabajos
  name: trabajos
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: trabajos
  strategy: {}
  template:
    metadata:
      annotations:
        kompose.cmd: C:\ProgramData\chocolatey\lib\kubernetes-kompose\tools\kompose.exe convert
        kompose.version: 1.26.1 (a9d05d509)
      creationTimestamp: null
      labels:
        io.kompose.network/aos: "true"
        io.kompose.service: trabajos
    spec:
      containers:
        - image: tetusrocus/subsistema3:latest
          name: trabajos
          ports:
            - containerPort: 3000
          resources: {}
      restartPolicy: Always
status: {}
