API-GestionLogs/despliegueKubernetes/vehiculos-2-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: C:\ProgramData\chocolatey\lib\kubernetes-kompose\tools\kompose.exe convert
    kompose.version: 1.26.1 (a9d05d509)
  creationTimestamp: null
  labels:
    io.kompose.service: vehiculos-2
  name: vehiculos-2
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: vehiculos-2
  strategy: {}
  template:
    metadata:
      annotations:
        kompose.cmd: C:\ProgramData\chocolatey\lib\kubernetes-kompose\tools\kompose.exe convert
        kompose.version: 1.26.1 (a9d05d509)
      creationTimestamp: null
      labels:
        io.kompose.network/aos: "true"
        io.kompose.service: vehiculos-2
    spec:
      containers:
        - image: esteban23/gestionvehiculosaos:v1
          name: vehiculos-2
          ports:
            - containerPort: 5000
          resources: {}
      restartPolicy: Always
status: {}
