API-GestionLogs/despliegueKubernetes/vehiculos-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: C:\ProgramData\chocolatey\lib\kubernetes-kompose\tools\kompose.exe convert
    kompose.version: 1.26.1 (a9d05d509)
  creationTimestamp: null
  labels:
    io.kompose.service: vehiculos
  name: vehiculos
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: vehiculos
  strategy: {}
  template:
    metadata:
      annotations:
        kompose.cmd: C:\ProgramData\chocolatey\lib\kubernetes-kompose\tools\kompose.exe convert
        kompose.version: 1.26.1 (a9d05d509)
      creationTimestamp: null
      labels:
        io.kompose.network/aos: "true"
        io.kompose.service: vehiculos
    spec:
      containers:
        - image: albertoseijo/aos_grupo4_global:aos_serviciologs
          name: vehiculos
          ports:
            - containerPort: 8080
          resources: {}
      restartPolicy: Always
status: {}
