API-GestionLogs/despliegueKubernetes/facturas-2-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: C:\ProgramData\chocolatey\lib\kubernetes-kompose\tools\kompose.exe convert
    kompose.version: 1.26.1 (a9d05d509)
  creationTimestamp: null
  labels:
    io.kompose.service: facturas-2
  name: facturas-2
spec:
  ports:
    - name: "82"
      port: 82
      targetPort: 4010
  selector:
    io.kompose.service: facturas-2
status:
  loadBalancer: {}
