API-GestionLogs/despliegueKubernetes/facturas-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: C:\ProgramData\chocolatey\lib\kubernetes-kompose\tools\kompose.exe convert
    kompose.version: 1.26.1 (a9d05d509)
  creationTimestamp: null
  labels:
    io.kompose.service: facturas
  name: facturas
spec:
  ports:
    - name: "81"
      port: 81
      targetPort: 80
  selector:
    io.kompose.service: facturas
status:
  loadBalancer: {}
