API-GestionLogs/despliegueKubernetes/logs-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: C:\ProgramData\chocolatey\lib\kubernetes-kompose\tools\kompose.exe convert
    kompose.version: 1.26.1 (a9d05d509)
  creationTimestamp: null
  labels:
    io.kompose.service: logs
  name: logs
spec:
  ports:
    - name: "83"
      port: 83
      targetPort: 3000
  selector:
    io.kompose.service: logs
status:
  loadBalancer: {}
