API-GestionLogs/despliegueKubernetes/notificaciones-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: C:\ProgramData\chocolatey\lib\kubernetes-kompose\tools\kompose.exe convert
    kompose.version: 1.26.1 (a9d05d509)
  creationTimestamp: null
  labels:
    io.kompose.service: notificaciones
  name: notificaciones
spec:
  ports:
    - name: "80"
      port: 80
      targetPort: 8080
  selector:
    io.kompose.service: notificaciones
status:
  loadBalancer: {}
