API-GestionLogs/despliegueKubernetes/recambios-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: C:\ProgramData\chocolatey\lib\kubernetes-kompose\tools\kompose.exe convert
    kompose.version: 1.26.1 (a9d05d509)
  creationTimestamp: null
  labels:
    io.kompose.service: recambios
  name: recambios
spec:
  ports:
    - name: "86"
      port: 86
      targetPort: 8080
  selector:
    io.kompose.service: recambios
status:
  loadBalancer: {}
