API-GestionLogs/despliegueKubernetes/trabajos-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: C:\ProgramData\chocolatey\lib\kubernetes-kompose\tools\kompose.exe convert
    kompose.version: 1.26.1 (a9d05d509)
  creationTimestamp: null
  labels:
    io.kompose.service: trabajos
  name: trabajos
spec:
  ports:
    - name: "87"
      port: 87
      targetPort: 3000
  selector:
    io.kompose.service: trabajos
status:
  loadBalancer: {}
