API-GestionLogs/despliegueKubernetes/vehiculos-2-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: C:\ProgramData\chocolatey\lib\kubernetes-kompose\tools\kompose.exe convert
    kompose.version: 1.26.1 (a9d05d509)
  creationTimestamp: null
  labels:
    io.kompose.service: vehiculos-2
  name: vehiculos-2
spec:
  ports:
    - name: "85"
      port: 85
      targetPort: 5000
  selector:
    io.kompose.service: vehiculos-2
status:
  loadBalancer: {}
