API-GestionLogs/despliegueKubernetes/vehiculos-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: C:\ProgramData\chocolatey\lib\kubernetes-kompose\tools\kompose.exe convert
    kompose.version: 1.26.1 (a9d05d509)
  creationTimestamp: null
  labels:
    io.kompose.service: vehiculos
  name: vehiculos
spec:
  ports:
    - name: "84"
      port: 84
      targetPort: 8080
  selector:
    io.kompose.service: vehiculos
status:
  loadBalancer: {}
