API-GestionLogs/despliegueKubernetes/aos-networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  creationTimestamp: null
  name: aos
spec:
  ingress:
    - from:
        - podSelector:
            matchLabels:
              io.kompose.network/aos: "true"
  podSelector:
    matchLabels:
      io.kompose.network/aos: "true"
